syntax = "proto3";

package bookstores;

import "google/protobuf/empty.proto";


service Bookstroe {
	rpc ListShelves(google.protobuf.Empty) returns (ListShelvesResponse) {}
	rpc CreateShelf(CreateShelfRequest) returns (Shelf) {}
	rpc GetShel(GetShelfRequest) returns (Shelf) {}

	rpc ListBooks(ListBookRequest) returns (ListBooksResponse) {}
	rpc CreateBook(CreateBookRequest) returns (Book) {}
	rpc GetBook(GetBookRequest) returns (Book) {}
}


message Shelf {
	int64 id=1;
	string theme=2;
}

message Book {
	int64 id=1;
	string author=2;
	string title=3;
}

//ListShelves -> Antwort eine List von Bücher: repeated -> eine Liste von 
message ListShelvesResponse {
	repeated Shelf shelves=1;
}

message CreateShelfRequest {
	Shelf shelf=1;
}

message GetShelfRequest {
	int64 shelf=1;
}

message ListBookRequest {
	int64 shelf =1;
}

// Response message to ListBooks method.
message ListBooksResponse {
  // The books on the shelf.
  repeated Book books = 1;
}

message CreateBookRequest {
  // The ID of the shelf on which to create a book.
  int64 shelf = 1;
  // A book resource to create on the shelf.
  Book book = 2;
}

// Request message for GetBook method.
message GetBookRequest {
  // The ID of the shelf from which to retrieve a book.
  int64 shelf = 1;
  // The ID of the book to retrieve.
  int64 book = 2;
}



